--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,15 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+amazon:
+  # 以下3行はそのまま
+  service: S3
+  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  # 以下２行は変える
+  region: ap-northeast-1 #東京
+  bucket: zuborameshi #自分で作成したS3のバケットの名前
+
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
